policies/example/binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: max-replicas-deployments
spec:
  policyName: max-replicas-deployments
  validationActions:
    - Deny
